--- a/_posts/2024-02-20-PERSONAL.md
+++ b/_posts/2024-02-20-PERSONAL.md
@@ -4,3 +4,9 @@ date: 2025-02-20 01:00:00 +/-0000
 categories: [project, personal, auto, technical, electrical]
 tags: [personal-project]     # TAG names should always be lowercase
 ---
+
+### Buggy Model based Automible Design and engineering 
+
+- Electrical wiring system installation
+- Engine modifications to comply with *requirements*
+- Structural modifications to the power frame
